--- a/TailwindCSS_Fundamentals/2. Container Spacing/index.html
+++ b/TailwindCSS_Fundamentals/2. Container Spacing/index.html
@@ -16,9 +16,54 @@
     <!-- Margin -->
     <!-- https://tailwindcss.com/docs/margin -->
 
+    <h1 class="text-4xl font-bold">1. Margin </h1>
+
+    <div class="w-[600px] bg-stone-900 text-grey-200 text-xl p-5 flex flex-col gap-3 mb-20">
+        <div class="bg-red-500 p-5 flex w-[100px] m-20">m-20</div>
+        <div class="bg-yellow-300 p-5 flex w-[100px] mb-8">mb-8</div>
+        <div class="bg-lime-500 p-5 flex w-[100px] ml-8">ml-8</div>
+        <div class="bg-cyan-400 p-5 flex w-[100px] mr-8">mr-8</div>
+        <div class="bg-indigo-500 p-5 flex w-[100px] mt-8">mt-8</div>
+        <div class="bg-purple-500 p-5 flex w-[100px] mx-20">mx-20</div>
+        <div class="bg-pink-400 p-5 flex w-[100px] my-10">my-10</div>
+        <div class="bg-rose-500 p-5 flex w-[100px] me-8">me-8</div>
+        <div class="bg-slate-300 p-5 flex w-[100px] ms-8">ms-8</div>
+        <div class="bg-emerald-300 p-5 flex w-[100px] -mt-3">-mt-3</div>
+        <div dir="rtl" class="flex flex-col gap-3">
+          <div class="bg-neutral-400 p-5 flex w-[100px] me-8">me-8</div>
+          <div class="bg-sky-300 p-5 flex w-[100px] ms-8">ms-8</div>
+        </div>
+    </div>
+
     <!-- Arbitrary Spacing -->
      <!-- https://tailwindcss.com/docs/border-spacing#arbitrary-values -->
 
+    <h1 class="text-4xl font-bold">2. Arbitrary Spacing </h1>
+
+    <div>
+      <table class="border-separate border-spacing-2 border border-gray-400 dark:border-gray-500 w-[600px] h-[400px] text-2xl">
+  <thead>
+    <tr>
+      <th class="border border-gray-300 dark:border-gray-600">State</th>
+      <th class="border border-gray-300 dark:border-gray-600">City</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="border border-gray-300 dark:border-gray-700 text-center">Indiana</td>
+      <td class="border border-gray-300 dark:border-gray-700 text-center">Indianapolis</td>
+    </tr>
+    <tr>
+      <td class="border border-gray-300 dark:border-gray-700 text-center">Ohio</td>
+      <td class="border border-gray-300 dark:border-gray-700 text-center">Columbus</td>
+    </tr>
+    <tr>
+      <td class="border border-gray-300 dark:border-gray-700 text-center">Michigan</td>
+      <td class="border border-gray-300 dark:border-gray-700 text-center">Detroit</td>
+    </tr>
+  </tbody>
+</table>
+    </div>
     <!-- Padding -->
     <!-- https://tailwindcss.com/docs/padding -->
 
