--- a/TailwindCSS_Fundamentals/08. Filters/index.html
+++ b/TailwindCSS_Fundamentals/08. Filters/index.html
@@ -7,20 +7,143 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Filters</title>
   </head>
-  <body>
+  <body class="p-20">
     <!-- Contrast -->
     <!-- https://tailwindcss.com/docs/contrast -->
+
+    <h1 class="text-4xl font-bold">1. Contrast</h1><br>
+
+    <div class="w-[1600px] h-[300px] p-5 flex gap-5 text-stone-400">
+      <div class="border w-96">
+        <img class="contrast-50 w-full h-full object-cover" src="https://images.unsplash.com/photo-1743704458905-9edf92294d7e?q=80&w=2108&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">contrast-50</p>
+      </div>
+      <div class="border w-96">
+        <img class="contrast-100 w-full h-full object-cover" src="https://images.unsplash.com/photo-1743704458905-9edf92294d7e?q=80&w=2108&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">contrast-100</p>
+      </div>
+      <div class="border w-96">
+        <img class="contrast-125 w-full h-full object-cover" src="https://images.unsplash.com/photo-1743704458905-9edf92294d7e?q=80&w=2108&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">contrast-125</p>
+      </div>
+      <div class="border w-96">
+        <img class="contrast-200 w-full h-full object-cover" src="https://images.unsplash.com/photo-1743704458905-9edf92294d7e?q=80&w=2108&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">contrast-200</p>
+      </div>
+    </div>
+
+
 
     <!-- Brightness -->
     <!-- https://tailwindcss.com/docs/brightness -->
 
+
+
+    <h1 class="text-4xl font-bold mt-20">2. Brightness</h1><br>
+
+    <div class="w-[1600px] h-[300px] p-5 flex gap-5 text-stone-400">
+      <div class="border w-96">
+        <img class="brightness-50 w-full h-full object-cover" src="https://images.unsplash.com/photo-1743704458905-9edf92294d7e?q=80&w=2108&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">brightness-50</p>
+      </div>
+      <div class="border w-96">
+        <img class="brightness-100 w-full h-full object-cover" src="https://images.unsplash.com/photo-1743704458905-9edf92294d7e?q=80&w=2108&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">brightness-100</p>
+      </div>
+      <div class="border w-96">
+        <img class="brightness-125 w-full h-full object-cover" src="https://images.unsplash.com/photo-1743704458905-9edf92294d7e?q=80&w=2108&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">brightness-125</p>
+      </div>
+      <div class="border w-96">
+        <img class="brightness-200 w-full h-full object-cover" src="https://images.unsplash.com/photo-1743704458905-9edf92294d7e?q=80&w=2108&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">brightness-200</p>
+      </div>
+    </div>
+
+
+
     <!-- Grayscale -->
     <!-- https://tailwindcss.com/docs/grayscale -->
+
+
+
+     <h1 class="text-4xl font-bold mt-20">3. Grayscale</h1><br>
+
+    <div class="w-[1600px] h-[300px] p-5 flex gap-5 text-stone-400">
+      <div class="border w-96">
+        <img class="grayscale-0 w-full h-full object-cover" src="https://images.unsplash.com/photo-1605755451415-d8ae49c5ef22?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">grayscale-0</p>
+      </div>
+      <div class="border w-96">
+        <img class="grayscale-[50%] w-full h-full object-cover" src="https://images.unsplash.com/photo-1605755451415-d8ae49c5ef22?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">grayscale-[50%]</p>
+      </div>
+      <div class="border w-96">
+        <img class="grayscale-[70%] w-full h-full object-cover" src="https://images.unsplash.com/photo-1605755451415-d8ae49c5ef22?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">grayscale-[70%]</p>
+      </div>
+      <div class="border w-96">
+        <img class="grayscale w-full h-full object-cover" src="https://images.unsplash.com/photo-1605755451415-d8ae49c5ef22?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">grayscale</p>
+      </div>
+    </div>
+
+
 
     <!-- Hue Rotate -->
     <!-- https://tailwindcss.com/docs/hue-rotate -->
 
+
+
+    <h1 class="text-4xl font-bold mt-20">4. Hue Rotate</h1><br>
+
+    <div class="w-[1600px] h-[300px] p-5 flex gap-5 text-stone-400">
+      <div class="border w-96">
+        <img class="hue-rotate-0 w-full h-full object-cover" src="https://images.unsplash.com/photo-1605755451415-d8ae49c5ef22?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">hue-rotate-0</p>
+      </div>
+      <div class="border w-96">
+        <img class="hue-rotate-30 w-full h-full object-cover" src="https://images.unsplash.com/photo-1605755451415-d8ae49c5ef22?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">hue-rotate-30</p>
+      </div>
+      <div class="border w-96">
+        <img class="hue-rotate-90 w-full h-full object-cover" src="https://images.unsplash.com/photo-1605755451415-d8ae49c5ef22?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">hue-rotate-90</p>
+      </div>
+      <div class="border w-96">
+        <img class="hue-rotate-180 w-full h-full object-cover" src="https://images.unsplash.com/photo-1605755451415-d8ae49c5ef22?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">hue-rotate-180</p>
+      </div>
+    </div>
+
+
+
     <!-- Blur -->
     <!-- https://tailwindcss.com/docs/blur -->
+
+    
+
+    <h1 class="text-4xl font-bold mt-20">5. Blur</h1><br>
+
+    <div class="w-[1600px] h-[300px] p-5 flex gap-5 text-stone-400">
+      <div class=" w-96">
+        <img class="blur-none w-full h-full object-cover" src="https://images.unsplash.com/photo-1729118321313-c16d853221fc?q=80&w=1528&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">blur-none</p>
+      </div>
+      <div class="w-96">
+        <img class="blur-sm w-full h-full object-cover" src="https://images.unsplash.com/photo-1729118321313-c16d853221fc?q=80&w=1528&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">blur-sm</p>
+      </div>
+      <div class="w-96">
+        <img class="blur-lg w-full h-full object-cover" src="https://images.unsplash.com/photo-1729118321313-c16d853221fc?q=80&w=1528&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">blur-lg</p>
+      </div>
+      <div class="w-96">
+        <img class="blur-2xl w-full h-full object-cover" src="https://images.unsplash.com/photo-1729118321313-c16d853221fc?q=80&w=1528&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+        <p class="text-2xl font-bold">blur-2xl</p>
+      </div>
+    </div>
+
+
   </body>
 </html>
